user access updates

--- a/Thesis/Views/Admin/Index.cshtml
+++ b/Thesis/Views/Admin/Index.cshtml
@@ -16,7 +16,7 @@
     </li>
 
     <li class="three">
-        <h5>@Html.ActionLink("Manage users", "Index", "Admin")</h5>
+        <h5>@Html.ActionLink("Manage users", "ManageUsers")</h5>
         Manage the access rights for the different users.
     </li>
 </ol>
