--- a/Thesis/Views/Shared/_LoginPartial.cshtml
+++ b/Thesis/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,10 @@
 ﻿@if (Request.IsAuthenticated) {
     <text>
         Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
+        @if(User.IsInRole("Installer") || User.IsInRole("Admin"))
+        {
+            @Html.ActionLink("Register a new person", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
+        }
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
             <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
@@ -8,7 +12,6 @@
     </text>
 } else {
     <ul>
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
