--- a/Thesis/Views/Account/Register.cshtml
+++ b/Thesis/Views/Account/Register.cshtml
@@ -27,6 +27,15 @@
                 @Html.LabelFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
+            <li>
+                @Html.LabelFor(m => m.AccessRights)
+                @Html.DropDownListFor(m => m.AccessRights, new SelectList(new[]
+                    {
+                        "Installer",
+                        "Admin",
+                        "User"
+                    }))
+            </li>
         </ol>
         <input type="submit" value="Register" />
     </fieldset>
