--- a/Thesis/Views/Admin/EditUser.cshtml
+++ b/Thesis/Views/Admin/EditUser.cshtml
@@ -31,7 +31,7 @@ New role: @Html.DropDownList("newRole", new SelectList(new[]
 @section scripts {
     <script type="text/javascript">
 
-
+        //TODO ajax call to change role
 
     </script>
 }
